# anton_assert

./: CMakeLists.txt  README.md
include/: anton_assert.hpp
src/: anton_assert_posix.cpp  anton_assert_win.cpp  debugging.cpp  debugging.hpp
